fix: Bad displayed label in expansion panel header on Firefox

--- a/src/app/components/quiz-creator/quiz-creator.component.scss
+++ b/src/app/components/quiz-creator/quiz-creator.component.scss
@@ -25,6 +25,15 @@
                 display: flex;
                 justify-content: flex-end;
                 align-items: center;
+                overflow: inherit;
+                .truncate-label {
+                    display: flex;
+                    text-overflow: ellipsis;
+                    justify-content: flex-end;
+                }
+                .panel-description-buttons {
+                    display: flex;
+                }
             }
         }
     }
